feat: finish core apis
